--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "angular": "^1.5.3",
     "angular-ui-router": "^0.2.18",
     "bootstrap": "^3.3.6",
-    "d3": "^4.1.1"
+    "d3": "^4.1.1",
+    "angular-local-storage": "^0.2.7"
   }
 }
